--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mynotesapp">
+    <permission android:name="com.example.mynotesapp.READ_DATABASE" android:protectionLevel="normal"/>
+    <permission android:name="com.example.mynotesapp.WRITE_DATABASE" android:protectionLevel="normal"/>
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NoteAddUpdateActivity"></activity>
+        <provider
+            android:name=".provider.NotesProvider"
+            android:authorities="com.example.mynotesapp"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.example.mynotesapp.READ_DATABASE"
+            android:writePermission="com.example.mynotesapp.WRITE_DATABASE"/>
+
+        <activity android:name=".NoteAddUpdateActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
